images change and new FAQ added along with position changes on personal page

--- a/contactus.html
+++ b/contactus.html
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-                            <img src="assets/images/About/hero-img.png" class="img-fluid animated" alt="">
+                            <img src="assets/images/contactus/support1.svg" class="img-fluid animated" alt="">
                         </div>
                     </div>
                 </div>
