--- a/faqs.html
+++ b/faqs.html
@@ -166,7 +166,7 @@
                             <div class="card-header" id="headingH14">
                                 <h4 style="background-color: #EBECF0; padding-bottom: 15px;padding-top: 15px;padding-left: 15px;margin-bottom: -5px;"
                                     class="mb-0 collapsed" data-toggle="collapse" data-target="#collapseH14"
-                                    aria-expanded="true" aria-controls="collapseH14">How can i stop a charger while charging?<span
+                                    aria-expanded="true" aria-controls="collapseH14">How can I stop a charger while charging?<span
                                         class="lni-chevron-up">
                                         <div class="arrow-down"></div>
                                     </span>
@@ -198,7 +198,26 @@
                                 </div>
                                 </div>
                                 </div>
-                                <p></p>			
+                                <p></p>
+
+                         <!-- FAQ6 OF HEADING1 -->
+                         <div class="card border-0 wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+                         <div class="card-header" id="headingH16">
+                         <h4 style="background-color: #EBECF0; padding-bottom: 15px;padding-top: 15px;padding-left: 15px;margin-bottom: -5px;"
+                         class="mb-0 collapsed" data-toggle="collapse" data-target="#collapseH16"
+                         aria-expanded="true" aria-controls="collapseH16">Can two EV's be charged at a same time with Rimone chargers ?<span class="lni-chevron-up">
+                         <div class="arrow-down"></div>
+                         </span>
+                         </h4>
+                         </div>
+                         <div class="collapse" id="collapseH16" aria-labelledby="headingH16" data-parent="#faqAccordion">
+                         <div class="card-body"
+                         style="background-color:#EBECF0; padding-left:15px; padding-top: 15px; font-size: 15px;padding-bottom: 15px;">
+                         It depend upon the charger you are using to charge. If it has two sockets, then two EV can be charged simultaneously. This feature is mostly available with DC fast chargers at Rimone network, where as Level2 Chargers have only single socket which means only one EV can be charged at a time. 
+                         </div>
+                         </div>
+                         </div>
+                         <p></p>								
 						
 
             </div>
