--- a/clientform.html
+++ b/clientform.html
@@ -99,7 +99,7 @@
                     <div class="d-flex justify-content-center justify-content-lg-start"> </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="assets/images/About/hero-img.png" class="img-fluid animated" alt="">
+                    <img src="assets/images/About/partner.svg" class="img-fluid animated" alt="">
                 </div>
             </div>
         </div>
