--- a/footer.html
+++ b/footer.html
@@ -72,7 +72,7 @@
        <p> &copy; Copyright <span class="year" id="currentYear"> </span> Rimone - All Rights Reserved.</p>
        </div>
        <div class="tc col-lg-6 col-md-4 col-sm-6 col-xs-6">
-       <a href=""> Terms of Serivices</a> | <a href="privacy.html"> Privacy Policy </a>
+       <a href="termsofservices.html"> Terms of Serivices</a> | <a href="privacypolicy.html"> Privacy Policy </a>
        </div>
        </div>
 
