--- a/personal.html
+++ b/personal.html
@@ -84,10 +84,11 @@
             <hr>
 			      <!-- ROW1 of Section1 Starts HERE -->
 			      <div class="container">           
+                    <!-- Caution! - The height and width for each image is 350 pixels, add new image according to it. -->
 			           <!-- ICON1 -->
 					   <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
                        <h4>Charging Basics</h4>
-                       <img src="assets/images/Personal/pr5.svg" />
+                       <img src="assets/images/Personal/pr5.svg" height="350" width="350"  />
                        <div class="btns">
                        <a href="charging-basics-1.html">LEARN MORE</a>
                        </div>
@@ -97,7 +98,7 @@
 					   <!-- ICON2 -->
                        <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
                        <h4>Types of EV's</h4>
-                       <img src="assets/images/Personal/pr9.svg" />
+                       <img src="assets/images/Personal/pr9.svg" height="350" width="350" />
                        <div class="btns">
                        <a href="type-of-evs.html">LEARN MORE</a>
                        </div>
@@ -106,7 +107,7 @@
 					   <!-- ICON3 -->
 					   <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
                        <h4>Best ways to charge EV</h4>
-                       <img src="assets/images/Personal/pr10.svg" />
+                       <img src="assets/images/Personal/pr10.svg" height="350" width="350"/>
                        <div class="btns">
                        <a href="best-ways-to-charge.html">LEARN MORE</a>
                        </div>
@@ -123,7 +124,7 @@
                        <!-- ICON4 -->
                        <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
                        <h4>Charging Etiquettes</h4>
-                       <img src="assets/images/Personal/pr1.png" />
+                       <img src="assets/images/Personal/pr1.png" height="350" width="350"/>
                        <div class="btns">
                        <a href="charging-etiquettes.html">LEARN MORE</a>
                        </div>
@@ -133,7 +134,7 @@
 					   <!-- ICON5 -->
 					   <div class="item-wrapper col-md-4 col-sm-4 col-xs-12">
                        <h4>FAQ's</h4>
-                       <img src="assets/images/Personal/pr4.svg" />
+                       <img src="assets/images/Personal/pr4.svg" height="350" width="350"/>
                        <div class="btns">
                        <a href="faqs.html">LEARN MORE</a>
                        </div>
