--- a/footer.html
+++ b/footer.html
@@ -59,7 +59,7 @@
                <h5>Follow Us:</h5>
                <a href="https://www.facebook.com/rimonecharge/"><i class="fa-brands fa-facebook"></i></a>
                <a href="https://www.linkedin.com/company/rimonecharge"><i class="fa-brands fa-linkedin"></i></a>
-               <a href="https://www.instagram.com/rimonecharge/"><i class="fa-brands fa-instagram"></i></a>
+               <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                <a href="https://twitter.com/rimonecharge"><i class="fa-brands fa-twitter"></i></a>
                </div>
 			   <!-- Column4 of Section1 of Footer One pagers Ends HERE -->
