--- a/footer.html
+++ b/footer.html
@@ -32,7 +32,7 @@
                <ul class="footer-list">
                   <li><a href="solution.html">EV Charging</a></li>
                   <li><a href="fleet.html">Electric Fleet</a></li>
-                  <li><a href="clientform.html">Host Charger</a></li>
+                  <li><a href="rimonepp.html">Host Charger</a></li>
                   <li><a href="about.html">About us</a></li>
                   <li><a href="contactus.html">Contact us</a></li>
                   <li><a href="faqs.html">FAQ's</a></li>
@@ -59,7 +59,7 @@
                <h5>Follow Us:</h5>
                <a href="https://www.facebook.com/rimonecharge/"><i class="fa-brands fa-facebook"></i></a>
                <a href="https://www.linkedin.com/company/rimonecharge"><i class="fa-brands fa-linkedin"></i></a>
-               <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+               <a href="https://www.instagram.com/rimone.charge/"><i class="fa-brands fa-instagram"></i></a>
                <a href="https://twitter.com/rimonecharge"><i class="fa-brands fa-twitter"></i></a>
                </div>
 			   <!-- Column4 of Section1 of Footer One pagers Ends HERE -->
