--- a/footer.html
+++ b/footer.html
@@ -31,9 +31,9 @@
                <h5>Company</h5>
                <ul class="footer-list">
                   <li><a href="solution.html">EV Charging</a></li>
-                  <li><a href="fleet.html">Electric Fleet</a></li>
                   <li><a href="rimonepp.html">Host Charger</a></li>
-                  <li><a href="about.html">About us</a></li>
+                  <li><a href="#">Careers</a></li>
+				  <li><a href="about.html">About us</a></li>
                   <li><a href="contactus.html">Contact us</a></li>
                   <li><a href="faqs.html">FAQ's</a></li>
                </ul>
