--- a/termsofservices.html
+++ b/termsofservices.html
@@ -301,7 +301,7 @@
 	   <h4>
 	   If You have any questions about the Solution or this TOS, please contact us at
 	   <br><br>
-       Address: SCO-7, Near SBI Bank, Sanour road, Patiala, Punjab(147001), India <br>
+       <!-- Address: SCO-7, Near SBI Bank, Sanour road, Patiala, Punjab(147001), India <br>  -->
        Phone: <a href="tel:7696012280" >+91-7696012280</a> <br>
        Email: <a href="mailto:info@rimonecharge.com" >info@rimonecharge.com</a> <br>
 	   <br>
