image size decreased

--- a/careers.html
+++ b/careers.html
@@ -49,12 +49,11 @@
 <body>
     <header>
         <div class="header-innerwrapper">
-            <div class="logo col-md-4  col-sm-4 col-xs-2">
+                <div class="logo col-md-4  col-sm-4 col-xs-2">
                 <a href="index.html"><img src="assets/images/logo.png" />
-            </div>
+                </div>
 
-            <div class="menu col-md-8 col-sm-8 col-xs-10"
-                style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
+        <div class="menu col-md-8 col-sm-8 col-xs-10"style="height: 6rem;line-height: 3;left: 18%;position: absolute;">
                 <div class="nav-wrapper">
                     <a href="#menu" class="menu-link">&#9776;</a>
                     <nav id="menu" class="panel" role="navigation">
@@ -88,25 +87,24 @@
     </header>
 
 
-    <!-- Section 1 - Hiring Notification -->
-    <section id="section1" class="d-flex align-items-center">
-        <div class="containers1">
-            <div class="row">
-                <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
-                    <h1>Empowering Careers</h1>
-                    <h4>Rimone is looking for people who can bring change not in others but can start with themselves.
-                        People who can bring a sustainable tomorrow not just for them but for all.</h4>
+             <!-- Section 1 - Hiring Notification -->
+             <section id="section1" class="d-flex align-items-center">
+             <div class="containers1">
+             <div class="row">
+             <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
+             <h1>Empowering Careers</h1>
+             <h4>Rimone is looking for people who can bring change not in others but within themselves. People who can build a sustainable tomorrow not just for them but for all.</h4>
                     
-					<!--  <div class="button-container"> 
-         				  <button class="jobpostings">Job Postings</button>
-                          </div>
-				    -->
+			 <!--  <div class="button-container"> 
+         	       <button class="jobpostings">Job Postings</button>
+                   </div>
+			 -->
                 
-				</div>
+			</div>
 
-                <div class="col-lg-6 order-1 order-lg-2 hero-img">
-                    <img src="assets/images/careers/c1.jpg" class="hiring-image" alt="Rimone is Hiring">
-                </div>
+            <div class="col-lg-6 order-1 order-lg-2 hero-img">
+            <img src="assets/images/careers/c1.jpg" class="hiring-image" alt="Rimone is Hiring">
+            </div>
             </div>
         </div>
     </section>
