--- a/faqs.html
+++ b/faqs.html
@@ -268,7 +268,8 @@
                                 First ensure that the charging is stopped. If it is still not disconnected try the following tips.
 						        <ul>
                                 <li>The car should release the connector automatically, you can use the key to lock and unlock the doors, this will release the socket.</li>
-                                <li>Sometime the connector stuck due to the weight of the cable, try supporting the cable and then unlock the connector using car keys.</li>
+								<li>Some of the EV's have a manual button to lock/unlock the connector on the dashboard, try using that.</li>
+                                <li>Sometime the connector stuck due to the weight of the cable, try supporting the cable and then unlock the connector.</li>
 						        </ul>
 						        Still there's a problem, contact Rimone customer care at +91-7696012280.  
                             </div>
@@ -292,7 +293,7 @@
                                 style="background-color:#EBECF0; padding-top: 15px; padding-left:15px; font-size: 15px;padding-bottom: 15px;">
                                 The charging speed will depend on several factors including:
                                 <ul>
-                                <li><strong>The battery level or, your "State of Charge"</strong> Batteries charge fastest when they are nearly empty (low SOC) </li>
+                                <li><strong>The battery level or, the "State of Charge"</strong> Batteries charge fastest when they are nearly empty (low SOC) </li>
                                 <li><strong>The duration of your fast charge</strong> As the battery fills up, the charging rate slows down to maximize the battery life. Above 80% SOC, it might be better to switch to an AC Level 2 charger.</li>
                                <li><strong>The battery temperature</strong> Batteries don't like to be too hot or too cold. During extreme weather (hot or cold), your charging rate will be slower.</li>
                                <li><strong>Battery deterioration</strong> Batteries can deteriorate over time and lose capacity. The normal loss of a battery's capacity is defined  by the vehicle's warranty.</li>
