--- a/fleet.html
+++ b/fleet.html
@@ -85,7 +85,7 @@
                       RIMONE has the best charging solution for your light, medium & heavy fleet with the best in class charging infrastructure withstanding global standards.
                       </p>
                       <div class="btns">
-                      <a href="contactus.html">CONTACT US</a>
+                      <a href="rimonepp.html">CONTACT US</a>
                       </div>
                       </div>
 			          <!-- SubSection1 of Section1 Ends HERE -->
