--- a/termsofservices.html
+++ b/termsofservices.html
@@ -80,7 +80,7 @@
         <div class="privacy-heading">         
         <h2>TERMS OF SERVICES</h2>
         <p>  </p>
-        <h4 style="color: black;"><strong>Last Updated Date: May 15, 2023</strong></h4>
+        <h4 style="color: black;"><strong>Last Updated Date: Sep 01, 2023</strong></h4>
         <p></p>
         </div>
         
@@ -301,7 +301,7 @@
 	   <h4>
 	   If You have any questions about the Solution or this TOS, please contact us at
 	   <br><br>
-       Address: SCO-7, Near SBI Bank, Sanour road, Patiala, Punjab(147001), India <br>
+       <!--   Address: SCO-7, Near SBI Bank, Sanour road, Patiala, Punjab(147001), India <br>   -->
        Phone: <a href="tel:7696012280" >+91-7696012280</a> <br>
        Email: <a href="mailto:info@rimonecharge.com" >info@rimonecharge.com</a> <br>
 	   <br>
