Newsroom added along with other minor corrections

--- a/contactus.html
+++ b/contactus.html
@@ -418,8 +418,8 @@
                                 <!-- ROW2 of the form asking for user Email ID and Phone number Ends here  -->
 
                                 <!-- ROW3 of the form asking user for their Message Starts here  -->
-                                <div class="form-group mt-3">
-                                    <textarea class="form-control" name="message" rows="5" id="message"
+                                <div class="form-group mt-3 mx-1 areatext">
+                                    <textarea style="width: 96%;" class="form-control  auto-resize" name="message" rows="5" cols="14" id="message" 
                                         placeholder="Message" required></textarea>
                                 </div>
                                 <!-- ROW3 of the form asking user for their Message Ends here  -->
