--- a/rimonepp.html
+++ b/rimonepp.html
@@ -391,7 +391,7 @@
                         <!-- ROW3 of the form asking for user City and State Ends here  -->
 
                         <!-- ROW4 of the form asking user for their Location Type Starts here  -->
-                        <div class="form-group mt-3">
+                        <div style="width: 96%;" class="form-group mt-3">
                             <div class="arrow-down-form"></div>
                             <select required name="location_type" id="location_type" class="form-control" onchange="showLocationTextbox()">
                                 <!-- onchange="showlocation(this.options[this.selectedIndex].value)" -->
@@ -413,7 +413,7 @@
                         <!-- ROW4 of the form asking user for their location type Ends here  -->
 
                         <!-- ROW5 of the form asking user for their Enquiry type Starts here  -->
-                        <div class="form-group mt-3">
+                        <div style="width: 96%;" class="form-group mt-3">
                             <div class="arrow-down-form"></div>
                             <select name="enquiry_type" id="enquiry_type" class="form-control" onchange="showEnquiryTextbox()" required>
                                 <!-- onchange="showquery(this.options[this.selectedIndex].value)" -->
@@ -434,7 +434,7 @@
                         <!-- ROW5 of the form asking user for their Enquiry type Ends here  -->
 
                         <!-- ROW6 of the form asking user for the message, Starts here  -->
-                        <div class="form-group mt-3">
+                        <div style="width: 96%;" class="form-group mt-3">
                             <textarea class="form-control" name="message" id="message" rows="5" placeholder="Message"
                                 required></textarea>
                         </div>
